# xqr

./: .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  README.md  TODO.txt  __main__.py  example.html  example.xml  pyproject.toml  test.xml
docs/: API.md  CONTRIBUTING.md  DATA.md  EXAMPLES.md  FORMAT.md  HTML.md  INSTALLATION.md  QUERY.md  SVG.md  TROUBLESHOOTING.md  WORKFLOW_PDF_TO_SVG.md  WORKFLOW_SVG_TO_PDF.md  index.html
editor/: README.md  index.html
examples/: README.md  batch_convert.sh  create_sample_pdf.py  enhanced_pdf_svg_workflow.py  pdf_svg_workflow.py  requirements.txt  svg_pdf_conversion.py  svg_pdf_conversion_fixed.py  svg_pdf_example.py  svg_pdf_metadata.py
file_editor/: __init__.py  cli.py
scripts/: README.md  install.ps1  install.sh
tests/: requirements-test.txt  test_cli.py  test_core.py  test_jquery_syntax.py
tests/pdf_workflow/: conftest.py  test_pdf_svg_workflow.py
xqr/: __init__.py  cli.py  core.py  examples.py  jquery_syntax.py  server.py  state.py
xqr/commands/: __init__.py  base.py  create.py  examples.py  load.py  ls.py  query.py  save.py  server.py  set.py  shell.py
xqr/core/: __init__.py  editor.py  examples.py  operations.py  parsers.py  xpath_utils.py
xqr/server/: __init__.py  handlers.py  server.py  static.py
